--- a/.github/workflows/android-dev.yml
+++ b/.github/workflows/android-dev.yml
@@ -21,60 +21,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  unit-tests:
-    uses: ./.github/workflows/unit-tests.yml
-
   deploy:
-    runs-on: ubuntu-latest
-    needs: [ unit-tests ]
-    env:
-      AWS_REGION: "ca-central-1"
-      AWS_ROLE: "arn:aws:iam::583168578067:role/HeartGitHubActionsDeployRole"
-      SECRETS_BUCKET: "583168578067-heart-static"
-      APP_ID: "me.heart.android.dev"
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: "Configure AWS Credentials"
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: ${{ env.AWS_ROLE }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: "Fetch secrets from S3"
-        run: |
-          aws s3 cp s3://${{ env.SECRETS_BUCKET }}/secrets/dev/android/keystore.jks android/keystore.jks
-          aws s3 cp s3://${{ env.SECRETS_BUCKET }}/secrets/dev/android/key.properties android/key.properties
-          aws s3 cp s3://${{ env.SECRETS_BUCKET }}/secrets/dev/android/google-services.json android/app/google-services.json
-          aws s3 cp s3://${{ env.SECRETS_BUCKET }}/secrets/dev/firebase/firebase_options.dart lib/firebase_options.dart
-          aws s3 cp s3://${{ env.SECRETS_BUCKET }}/secrets/dev/android/playstore-sa-key.json playstore-sa-key.json  
-
-      - name: "Set up Flutter"
-        uses: flutter-actions/setup-flutter@v4
-        with:
-          channel: 'stable'
-          version: 'latest'
-          cache: true
-          cache-sdk: true
-
-      - name: "Setup Gradle cache"
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: "Build dev app bundle"
-        run: flutter build appbundle --release --flavor dev --build-number ${{ github.run_number }}
-
-      - name: "Upload to Internal testing in Play Store"
-        uses: r0adkll/upload-google-play@v1
-        with:
-          serviceAccountJson: "playstore-sa-key.json"
-          packageName: ${{ env.APP_ID }}
-          releaseFiles: "build/app/outputs/bundle/devRelease/app-dev-release.aab"
-          track: internal
-          status: draft
+    uses: ./.github/workflows/google-play-deployment.yml
+    with:
+      app_id: 'me.heart.android.dev'
+      aws_region: 'ca-central-1'
+      aws_role: 'arn:aws:iam::583168578067:role/HeartGitHubActionsDeployRole'
+      environment: 'dev'
+      flavor: 'dev'
+      secrets_bucket: '583168578067-heart-static'
+      track: 'internal'
