--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -46,10 +46,30 @@ jobs:
       - name: Run tests
         run: flutter test ${{ matrix.package }}
 
+  lint:
+    name: "Lint"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Flutter
+        uses: flutter-actions/setup-flutter@v4
+        with:
+          channel: 'stable'
+          version: 'latest'
+          cache: true
+          cache-sdk: true
+
+      - name: "Install dependencies"
+        run: flutter pub get
+
+      - name: "Run Analysis"
+        run: flutter analyze
+
   test_app:
     name: "App • tests"
     runs-on: ubuntu-latest
-    needs: [ test_packages ]
+    needs: [ test_packages, lint ]
     steps:
       - uses: actions/checkout@v4
 
