--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -43,33 +43,13 @@ jobs:
         working-directory: ${{ matrix.package }}
         run: dart run build_runner build --delete-conflicting-outputs
 
-      - name: Run tests
+      - name: "Run tests"
         run: flutter test ${{ matrix.package }}
-
-  lint:
-    name: "Lint"
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Flutter
-        uses: flutter-actions/setup-flutter@v4
-        with:
-          channel: 'stable'
-          version: 'latest'
-          cache: true
-          cache-sdk: true
-
-      - name: "Install dependencies"
-        run: flutter pub get
-
-      - name: "Run Analysis"
-        run: flutter analyze
 
   test_app:
     name: "App • tests"
     runs-on: ubuntu-latest
-    needs: [ test_packages, lint ]
+    needs: [ test_packages ]
     steps:
       - uses: actions/checkout@v4
 
@@ -86,6 +66,9 @@ jobs:
 
       - name: Generate code
         run: dart run build_runner build --delete-conflicting-outputs
+
+      - name: "Run Static Analysis"
+        run: flutter analyze
 
       - name: Run app tests
         run: flutter test
