--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,13 +67,14 @@ android {
             dimension "default"
             applicationIdSuffix ".dev"
             resValue "string", "app_name", "Heart dev"
-            manifestPlaceholders.deepLink = "dev.app.heart-of.me"
+            manifestPlaceholders.deepLink = "dev.heart-of.me"
         }
+
         prod {
             dimension "default"
             applicationIdSuffix ""
             resValue "string", "app_name", "Heart"
-            manifestPlaceholders.deepLink = "app.heart-of.me"
+            manifestPlaceholders.deepLink = "heart-of.me"
         }
     }
 
